<resources>
    <string name="app_name">Calculator</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="dec">.</string>

    <string name="op_div">÷</string>
    <string name="op_mul">×</string>
    <string name="op_add">+</string>
    <string name="op_sub">-</string>
    <string name="op_per">%</string>
    <string name="op_eq">=</string>

    <string name="const_e">e</string>
    <string name="const_pi">π</string>
    <string name="l_paren">(</string>
    <string name="r_paren">)</string>
    <string name="op_pow">^</string>
    <string name="op_sqrt">√</string>
    <string name="inf">∞</string>

    <string name="fun_cos">cos</string>
    <string name="fun_ln">ln</string>
    <string name="fun_log">log</string>
    <string name="fun_sin">sin</string>
    <string name="fun_tan">tan</string>
    <string name="fun_fac">!</string>
    <string name="error_nan">Not a Number</string>
    <string name="error_syntax">Expression Error!</string>


    //speechm input replacement texts

    <string name="mul_by1">multiplied by</string>
    <string name="mul_by2">into</string>
    <string name="div_by1">divided by</string>
    <string name="div_by2">by</string>
    <string name="add1">plus</string>
    <string name="add2">add</string>
    <string name="sub1">minus</string>
    <string name="digit_00">00</string>
    <string name="fun_shift">SHIFT</string>
    <string name="fun_sinh">sinh</string>
    <string name="fun_cosh">cosh</string>
    <string name="fun_tanh">tanh</string>
    <string name="fun_deg">DEG</string>
    <string name="fun_sin_inv">sin⁻¹</string>
    <string name="fun_cos_inv">cos⁻¹</string>
    <string name="fun_tan_inv">tan⁻¹</string>
    <string name="fun_sinh_inv">sinh⁻¹</string>
    <string name="fun_cosh_inv">cosh⁻¹</string>
    <string name="fun_tanh_inv">tanh⁻¹</string>
    <string name="app_pub_id">ca-app-pub-1502114081982564~7541610454</string>
    <string name="ban_ad_unit_id">ca-app-pub-1502114081982564/2951914168</string>


</resources>
