<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/num_panel_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/digit_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/dec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/dec"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/digit_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/digit_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/digit_00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:onClick="btnClicked"
                android:text="@string/digit_00"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/num_text_color"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>