<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/num_panel_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/op_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="btnClicked"
            android:text="@string/op_div"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/num_text_color" />

        <Button
            android:id="@+id/op_mul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="btnClicked"
            android:text="@string/op_mul"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/num_text_color" />

        <Button
            android:id="@+id/op_sub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="btnClicked"
            android:text="@string/op_sub"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/num_text_color" />

        <Button
            android:id="@+id/op_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:onClick="btnClicked"
            android:text="@string/op_add"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/num_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/del"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:foreground="@drawable/ic_del"
            android:foregroundGravity="center"
            android:onClick="btnClicked" />


        <Button
            android:id="@+id/op_per"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:onClick="btnClicked"
            android:text="@string/op_per"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/num_text_color" />

        <Button
            android:id="@+id/eq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#BEFF5252"
            android:onClick="btnClicked"
            android:text="@string/op_eq"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/num_text_color" />
    </LinearLayout>

</LinearLayout>